syntax = "proto3";

package executors.v1.plan.v1;

import "executors/v1/plan/v1/configs.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/executors/v1/plan/v1";

// WaypointRef represents all of the information required for the build
message WaypointRunner {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  string on_demand_runner_config = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];

  string image_url = 3 [(validate.rules).string.min_len = 5];
  EnvVars env_vars = 4;
}
